-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.7.0
-
None
-
bfaa08a335f21e6fdf533969779f806883fe27b0
When you create a ToolTip instance child item in a [parent] item, the delay and timeout properties will be ignored and the tooltip will appear immediately.
Example code (Remove commented lines and comment the attached properties to get correct results):
import QtQuick 2.7 import QtQuick.Controls 2.0 Item { Button { text: '1234567890' width: 80 height: 30 x: 40 y: 30 hoverEnabled: true //ToolTip.delay: 1000 //ToolTip.timeout: 5000 //ToolTip.text: text //ToolTip.visible: hovered ToolTip { delay: 1000 timeout: 5000 text: parent.text visible: parent.hovered } } }
| For Gerrit Dashboard: QTBUG-55572 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 172579,4 | Fix QQuickToolTip's delay and visibility | 5.7 | qt/qtquickcontrols2 | Status: MERGED | -2 | 0 |